; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_stm32/extr_ergodox_stm32.c_ergodox_blink_all_leds.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_stm32/extr_ergodox_stm32.c_ergodox_blink_all_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ergodox_blink_all_leds() #0 {
  %1 = call i32 (...) @ergodox_led_all_off()
  %2 = call i32 (...) @ergodox_board_led_1_on()
  %3 = call i32 @wait_ms(i32 50)
  %4 = call i32 (...) @ergodox_board_led_2_on()
  %5 = call i32 @wait_ms(i32 50)
  %6 = call i32 (...) @ergodox_board_led_3_on()
  %7 = call i32 @wait_ms(i32 50)
  %8 = call i32 (...) @ergodox_board_led_1_off()
  %9 = call i32 @wait_ms(i32 50)
  %10 = call i32 (...) @ergodox_board_led_2_off()
  %11 = call i32 @wait_ms(i32 50)
  %12 = call i32 (...) @ergodox_board_led_3_off()
  ret void
}

declare dso_local i32 @ergodox_led_all_off(...) #1

declare dso_local i32 @ergodox_board_led_1_on(...) #1

declare dso_local i32 @wait_ms(i32) #1

declare dso_local i32 @ergodox_board_led_2_on(...) #1

declare dso_local i32 @ergodox_board_led_3_on(...) #1

declare dso_local i32 @ergodox_board_led_1_off(...) #1

declare dso_local i32 @ergodox_board_led_2_off(...) #1

declare dso_local i32 @ergodox_board_led_3_off(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
